kubernetes/ingress/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopcar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/customers/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-customer-service
                port:
                  number: 8081
          - path: /api/v1/vehicles/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-vehicle-service
                port:
                  number: 8082
          - path: /api/v1/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ms-order-service
                port:
                  number: 8083
